# vassi

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  __init__.py  pyproject.toml  series_operations.py  setup.cfg
datasets/social_cichlids/: cichlids_annotations.csv  cichlids_trajectories.h5
docs/: conf.py  config.yaml  index.rst
docs/_static/: SI6_interactive_validation.vtt  custom.css
docs/source/: 1_installation.rst  2_example_datasets.rst  3_basic_usage.rst  4_import_data.rst  5_feature_extraction.rst  automated_scoring.classification.postprocessing.rst  automated_scoring.classification.predict.rst  automated_scoring.classification.results.rst  automated_scoring.classification.rst  automated_scoring.classification.utils.rst  automated_scoring.classification.visualization.rst  automated_scoring.config.rst  automated_scoring.data_structures.base.rst  automated_scoring.data_structures.collection.rst  automated_scoring.data_structures.instance.rst  automated_scoring.data_structures.rst  automated_scoring.data_structures.timestamped_collection.rst  automated_scoring.data_structures.trajectory.rst  automated_scoring.data_structures.type_checking.rst  automated_scoring.data_structures.utils.rst  automated_scoring.dataset.observations.bouts.rst  automated_scoring.dataset.observations.rst  automated_scoring.dataset.observations.utils.rst  automated_scoring.dataset.permute.rst  automated_scoring.dataset.rst  automated_scoring.dataset.types.dataset.rst  automated_scoring.dataset.types.dyad.rst  automated_scoring.dataset.types.group.rst  automated_scoring.dataset.types.individual.rst  automated_scoring.dataset.types.mixins.annotated.rst  automated_scoring.dataset.types.mixins.annotated_sampleable.rst  automated_scoring.dataset.types.mixins.nested.rst  automated_scoring.dataset.types.mixins.rst  automated_scoring.dataset.types.mixins.sampleable.rst  automated_scoring.dataset.types.rst  automated_scoring.dataset.utils.rst  automated_scoring.distributed.rst  automated_scoring.features.caching.rst  automated_scoring.features.decorators.rst  automated_scoring.features.feature_extractor.rst  (+65 more)
examples/: classification-social_cichlids.ipynb  classification-visualization-results.ipynb  classification.ipynb  config_file-cichlids.yaml  config_file.yaml  features.ipynb  helpers.py  linking.ipynb  mice-smoothing_experiment.py  mpi_test-experiment.py  observation-library.ipynb  run_experiment-mpi.sh  run_smoothing_experiment-mice-mpi.sh  testing.ipynb  vis.ipynb
examples/CALMS21/: classification-visualization-results.ipynb  classification.ipynb  conversion.py  convert_calms21_dataset.py  download_calms21_dataset.py  extract_features-mice.py  features-mice.yaml  helpers.py  interactive_validation.ipynb  minimal_example.ipynb  optimization-results.yaml  optimization-summary.yaml  optimization-trials.csv  postprocessing_experiment-mice-sequential.py  postprocessing_experiment-mice.py  postprocessing_parameters.ipynb  results_and_figures-mice.ipynb  results_and_figures.ipynb  results_smoothing.csv  results_thresholding-attack.csv  results_thresholding-investigation.csv  results_thresholding-mount.csv  results_thresholding-none.csv  run_extract_features-mice.sh  run_postprocessing_experiment-mice-distributed.sh  run_smoothing_experiment-mice-mpi.sh  run_thresholding_experiment-mice-mpi.sh  smoothing_experiment-mice.py  thresholding_experiment-mice.py
pyTrajectory/: reidentification.py  series_decorators.py  series_math.py  trajectory.py  trajectory_operations.py  utils.py  visualization.py
(+235 files in other folders)
