[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-scoring"
version = "0.0.1"
dependencies = [
    "numba",
    "tbb",
    "numpy>=2.0",
    "h5py",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "xgboost",
    "networkx",
    "loguru",
    "observation-library @ git+ssh://git@github.com/pnuehrenberg/observation-library.git",
]
requires-python = ">=3.12"

[tool.pyright]
venvPath = "/home/paul/miniforge3/envs"
venv = "vuetify"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["D100", "D101", "D102", "D104", "D103", "D105"]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.format]
docstring-code-format = true
