[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vassi"
version = "0.0.1"
dependencies = [
    "tbb",
    "numba",
    "numpy>=2.0",
    "h5py",
    "pandas",
    "pandas-stubs",
    "tables",
    "matplotlib",
    "scikit-learn",
    "xgboost",
    "networkx",
    "loky",
    "loguru",
    "optuna",
    "observation-library @ git+ssh://git@github.com/pnuehrenberg/observation-library.git",
    "jupyterlab",
]
requires-python = ">=3.12"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-copybutton",
    "jupyter-sphinx",
    "nbsphinx",
    "shibuya",
    "sphinxcontrib-video",
    "sphinx_autodoc_typehints",
]

[tool.pyright]
venvPath = "/home/paul/miniforge3/envs"
venv = "vassi"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["D100", "D101", "D102", "D104", "D103", "D105"]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.format]
docstring-code-format = true
