[metadata]
name = pyTrajectory
version = 0.0.1
author = Paul Nuehrenberg
author_email = paul.nuehrenberg@uni-konstanz.de
description = Helper functions and classes for trajectory analyses
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
